--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,7 @@ $gray-lightest: #fafafa;
 $text-muted: $gray;
 
 @import '~bootstrap/scss/bootstrap';
+@import 'scss/button';
 @import 'scss/card';
 @import 'scss/imagery';
 @import 'scss/layout';
