--- a/src/style.scss
+++ b/src/style.scss
@@ -12,7 +12,7 @@ $gray-lighter: #e5e5e5;
 $gray-lightest: #fafafa;
 $text-muted: $gray;
 
-@import '~bootstrap/scss/bootstrap';
+@import 'scss/bootstrap';
 @import 'scss/button';
 @import 'scss/card';
 @import 'scss/imagery';
